--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit --runInBand",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "main_tests": "jest --forceExit --runInBand --verbose --ci --testResultsProcessor=\"jest-junit\" -- index.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "jest-junit": "^15.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
