--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,10 +2,9 @@ FROM node
 
 WORKDIR /app
 
-COPY package.json ./
-COPY package-lock.json ./
+COPY package*.json ./
 
-RUN npm install -g npm@9.2.0
+RUN npm install -g npm@9.3.0
 
 COPY . .
 
